Addressed review comments

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -39,14 +39,14 @@
     "\n",
     "def get_db_selection_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    Creates a UI form for choosing between the ITDE and a customer database.\n",
+    "    Creates a UI form for choosing between the Docker-DB and a customer database.\n",
     "\n",
     "    There should be a global variable `sb_config` referencing a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
-    "    db_options = ['ITDE', 'Custom']\n",
+    "    db_options = ['Docker-DB', 'Custom']\n",
     "    db_choice = 0 if sb_config.get(Cfg.use_itde.value, 'True') == 'True' else 1\n",
     "    db_selector = widgets.RadioButtons(options=db_options, value=db_options[db_choice], \n",
     "                                       layout=ui_look.input_layout, style=ui_look.input_style)\n",
@@ -110,9 +110,9 @@
     "    return get_generic_config_ui(sb_config, inputs, group_names)\n",
     "\n",
     "\n",
-    "def get_itde_config_ui() -> widgets.Widget:\n",
+    "def get_docker_db_config_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    Creates a UI form for editing ITDE configuration.\n",
+    "    Creates a UI form for editing the Docker-DB configuration.\n",
     "\n",
     "    There should be a global variable `sb_config` referencing a configuration store object.\n",
     "    \"\"\"\n",
@@ -137,15 +137,15 @@
     "    \"\"\"\n",
     "\n",
     "    if sb_config.get(Cfg.use_itde.value, 'True') == 'True':\n",
-    "        return get_itde_config_ui()\n",
+    "        return get_docker_db_config_ui()\n",
     "    else:\n",
     "        return get_custom_db_config_ui()\n",
     "\n",
     "\n",
-    "def get_start_itde_ui() -> widgets.Widget:\n",
+    "def get_start_docker_db_ui() -> widgets.Widget:\n",
     "    \"\"\"\n",
-    "    A UI for starting or restarting the ITDE.\n",
-    "    It checks if an instance of the ITDE is already running. If it is, a warning is displayed.\n",
+    "    A UI for starting or restarting the Docker-DB.\n",
+    "    It checks if an instance of the Docker-DB is already running. If it is, a warning is displayed.\n",
     "    An existing instance will be shut down before a new one is created.\n",
     "\n",
     "    There should be a global variable `sb_config` referencing a configuration store object.\n",
@@ -160,7 +160,7 @@
     "\n",
     "    is_running = is_itde_running(sb_config)\n",
     "\n",
-    "    header_text = 'Restart ITDE' if is_running else 'Start ITDE'\n",
+    "    header_text = 'Restarting Docker-DB' if is_running else 'Starting Docker-DB'\n",
     "    header_lbl = widgets.Label(value=header_text, style=ui_look.header_style, layout=ui_look.header_layout)\n",
     "        \n",
     "    run_btn = widgets.Button(description='Run', style=ui_look.button_style, layout=ui_look.button_layout)\n",
