--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "The configuration parameters may include the location of the Exasol database, the access credentials for the database, and the parameters of its BucketFS file system.\n",
     "\n",
-    "Once specified, the parameters are stored in a local lightweight database. All notebooks, including this one, access configuration data in this database. The configuration database is encrypted and protected with a password.\n",
+    "Once specified, the parameters are stored in a configuration store. All notebooks, including this one, access configuration data in this store. The configuration store is encrypted and protected with a password.\n",
     "\n",
-    "Before starting working with any notebook in the AI-Lab one needs to connect to the configuration database providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
+    "Before starting working with any notebook in the AI-Lab one needs to connect to the configuration store providing the name of the file where the data is stored and the password. If the file with the specified name doesn't exist a new file will be created and protected with the entered password. However, if the file does exist it will be opened only if the provided password matches the password the file was created with.\n",
     "\n",
     "## Access configuration"
    ]
@@ -61,7 +61,7 @@
    "source": [
     "## Choose the database\n",
     "\n",
-    "First, we need to choose which database we will work with. The AI-Lab includes a so-called Integration Test Docker Environment (ITDE). This is a single-node database running in a Docker container. It's a good choice of a database for any light-weight experiment designed as a proof of concept.\n",
+    "First, we need to choose which database we will work with. The AI-Lab includes a so-called Docker-DB. This is a single-node database running in a Docker container. It's a good choice of a database for any light-weight experiment designed as a proof of concept.\n",
     "\n",
     "For more practical work one might choose a customer database with real data.\n",
     "\n",
@@ -85,7 +85,7 @@
    "source": [
     "## Set up main configuration\n",
     "\n",
-    "Here we are going to set or update one lot of configuration parameters or the other depending on the choice of the database. All configuration parameters are saved in the configuration store. If this step has already been completed there is no need to repeat it unless we want to update some of the parameter values."
+    "Here we are going to enter the main configuration parameters. The set of configuration parameters depend on the choice of the database. All configuration parameters are saved in the configuration store. If this step has already been completed there is no need to repeat it unless we have switched to another database or want to modify some of the parameter values."
    ]
   },
   {
@@ -103,9 +103,9 @@
    "id": "c57ab0bf-8b56-433e-b8a8-55d8bd4ff931",
    "metadata": {},
    "source": [
-    "## Start ITDE database\n",
+    "## Start the Docker-DB\n",
     "\n",
-    "If we choose to use the ITDE database we need to launch it after every restart of the AI-Lab. This operation may take a few moments. Please wait till it is completed before proceeding with the next step.\n",
+    "If we choose to use the Docker-DB we need to launch it after every restart of the AI-Lab. This operation may take a few moments. Please wait till it is completed before proceeding with the next step.\n",
     "\n",
     "For a customer database, this operation will take no effect."
    ]
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_start_itde_ui())"
+    "display(get_start_docker_db_ui())"
    ]
   },
   {
