Updated config element names

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "with open_pyexasol_connection(sb_config) as conn:\n",
     "    conn.execute(sql, query_params={\n",
-    "        \"schema_name\": sb_config.SCHEMA,\n",
+    "        \"schema_name\": sb_config.db_schema,\n",
     "        \"table_name\": TABLE_NAME\n",
     "    })"
    ],
@@ -141,7 +141,7 @@
     "\n",
     "with open_pyexasol_connection(sb_config) as conn:\n",
     "    conn.execute(sql, query_params={\n",
-    "        \"schema\": sb_config.SCHEMA,\n",
+    "        \"schema\": sb_config.db_schema,\n",
     "        \"access_key\": S3_ACCESS_KEY,\n",
     "        \"secret_key\": S3_SECRET_KEY,\n",
     "    })"
@@ -173,7 +173,7 @@
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"schema\": sb_config.SCHEMA,\n",
+    "    \"schema\": sb_config.db_schema,\n",
     "    \"table\": TABLE_NAME,  \n",
     "}\n",
     "\n",
