--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
@@ -55,7 +55,7 @@
     "bfs_path = bfs_utils.put_file(bfs_bucket, jar_local_path)\n",
     "\n",
     "with open_pyexasol_connection(sb_config) as conn:\n",
-    "    cloud_storage.setup_scripts(conn, sb_config.SCHEMA, bfs_path)\n",
+    "    cloud_storage.setup_scripts(conn, sb_config.db_schema, bfs_path)\n",
     "    \n",
     "print(\"Could Storage Extension was initialized\")"
    ],
