--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -144,13 +144,13 @@
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
-    "sql = f'CREATE SCHEMA IF NOT EXISTS \"{sb_config.SCHEMA}\"'\n",
+    "sql = f'CREATE SCHEMA IF NOT EXISTS \"{sb_config.db_schema}\"'\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
     "    conn.execute(query=sql)\n",
     "\n",
     "print(f\"Schema created in {stopwatch}\")"
    ]
-  },
+  }
  ],
  "metadata": {
   "kernelspec": {
