--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "### Set AWS credentials\n",
     "\n",
-    "We need to enter security credentials that will allow us to use the AWS services."
+    "We need to enter security credentials that will allow us to use the AWS services. Skip this step if all necessary information has already been entered."
    ]
   },
   {
