--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_abalone.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "target_column = 'RINGS'\n",
     "bfs_model_path = get_udf_bucket_path(sb_config) + '/abalone_svm_model.pkl'\n",
-    "params = {'schema': sb_config.SCHEMA, 'test_table': 'ABALONE_TEST', 'model_path': bfs_model_path}\n",
+    "params = {'schema': sb_config.db_schema, 'test_table': 'ABALONE_TEST', 'model_path': bfs_model_path}\n",
     "\n",
     "stopwatch = Stopwatch()\n",
     "\n",
