--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_predict_udf.ipynb
@@ -105,7 +105,7 @@
     "\"\"\")\n",
     "\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    conn.execute(query=sql, query_params={'schema': sb_config.SCHEMA})\n",
+    "    conn.execute(query=sql, query_params={'schema': sb_config.db_schema})\n",
     "\n",
     "print(f\"Creating prediction script took: {stopwatch}\")"
    ]
