--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
@@ -59,7 +59,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'ABALONE_TRAIN'))\n",
+    "    df = conn.export_to_pandas(query_or_table=(sb_config.db_schema, 'ABALONE_TRAIN'))\n",
     "\n",
     "X, y = df.drop(columns='RINGS'), df['RINGS']\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)\n",
@@ -187,7 +187,7 @@
    "source": [
     "## Upload model into BucketFS\n",
     "\n",
-    "Now, let's upload the model into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) so that it can be used for making predictions in SQL queries. To communicate with BucketFS we will be using the <a href=\"https://exasol.github.io/bucketfs-python/\" target=\"_blank\" rel=\"noopener\">`bucketfs-python`</a> module. "
+    "Now, let's upload the model into the BucketFS so that it can be used for making predictions in SQL queries. To communicate with BucketFS we will be using the <a href=\"https://exasol.github.io/bucketfs-python/\" target=\"_blank\" rel=\"noopener\">`bucketfs-python`</a> module. "
    ]
   },
   {
