--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_telescope.ipynb
@@ -58,7 +58,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'TELESCOPE_TRAIN'))\n",
+    "    df = conn.export_to_pandas(query_or_table=(sb_config.db_schema, 'TELESCOPE_TRAIN'))\n",
     "\n",
     "print(f\"Loading the data took: {stopwatch}\")"
    ]
