--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config)"
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -138,9 +138,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.TE_BFS_CONN}}',\n",
-    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
-    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT1}}',\n",
@@ -187,9 +187,9 @@
     "(\n",
     "    SELECT TE_QUESTION_ANSWERING_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.TE_BFS_CONN}}',\n",
-    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
-    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{TEST_QUESTION}}',\n",
     "        '{{TEST_CONTEXT2}}',\n",
