--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config)"
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -136,9 +136,9 @@
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
     "        NULL,\n",
-    "        '{{sb_config.TE_BFS_CONN}}',\n",
-    "        '{{sb_config.TE_TOKEN_CONN}}',\n",
-    "        '{{sb_config.TE_MODELS_BFS_DIR}}',\n",
+    "        '{{sb_config.te_bfs_connection}}',\n",
+    "        '{{sb_config.te_hf_connection}}',\n",
+    "        '{{sb_config.te_models_bfs_dir}}',\n",
     "        '{{MODEL_NAME}}',\n",
     "        '{{MY_TEXT}}',\n",
     "        NULL\n",
