--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
@@ -34,13 +34,13 @@
    "source": [
     "import ipywidgets as widgets\n",
     "\n",
+    "from exasol.ai_lab_config import AILabConfig as Cfg\n",
+    "\n",
     "\n",
     "def get_te_config_ui() -> widgets.Widget:\n",
     "\n",
-    "    token_key = 'HF_TOKEN'\n",
-    "\n",
     "    inputs = [\n",
-    "        ('Access token', widgets.Password(value=sb_config.get(token_key)), token_key)\n",
+    "        ('Access token', widgets.Password(value=sb_config.get(Cfg.huggingface_token)), Cfg.huggingface_token)\n",
     "    ]\n",
     "\n",
     "    return get_generic_config_ui(sb_config, [inputs], ['Huggingface Access Parameters'])\n"
