--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "%load_ext sql\n",
     "%sql engine\n",
-    "%sql OPEN SCHEMA {{sb_config.SCHEMA}}\n",
+    "%sql OPEN SCHEMA {{sb_config.db_schema}}\n",
     "%sql {{get_activation_sql(sb_config)}}"
    ]
   }
