--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -47,7 +47,7 @@
     "    ui_look = get_config_styles()\n",
     "\n",
     "    db_options = ['Docker-DB', 'Custom']\n",
-    "    db_choice = 0 if sb_config.get(Cfg.use_itde.value, 'True') == 'True' else 1\n",
+    "    db_choice = 0 if sb_config.get(Cfg.use_itde, 'True') == 'True' else 1\n",
     "    db_selector = widgets.RadioButtons(options=db_options, value=db_options[db_choice], \n",
     "                                       layout=ui_look.input_layout, style=ui_look.input_style)\n",
     "    select_btn = widgets.Button(description='Select', style=ui_look.button_style, layout=ui_look.button_layout)\n",
@@ -55,7 +55,7 @@
     "\n",
     "\n",
     "    def select_database(btn):\n",
-    "        sb_config.save(Cfg.use_itde.value, str(db_selector.value == db_options[0]))\n",
+    "        sb_config.save(Cfg.use_itde, str(db_selector.value == db_options[0]))\n",
     "        btn.icon = 'check'\n",
     "\n",
     "    def on_value_change(change):\n",
@@ -79,29 +79,30 @@
     "\n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Host Name', widgets.Text(value=sb_config.get(Cfg.db_host_name.value, '127.0.0.1')), Cfg.db_host_name.value),\n",
-    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.db_port.value, '8888'))), Cfg.db_port.value),\n",
-    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.db_user.value)), Cfg.db_user.value),\n",
-    "            ('Password', widgets.Password(value=sb_config.get(Cfg.db_password.value)), Cfg.db_password.value),\n",
-    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema.value, 'IDA')), Cfg.db_schema.value),\n",
-    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.db_encryption.value, 'True') == 'True', indent=False),\n",
-    "                Cfg.db_encryption.value)\n",
+    "            ('Host Name', widgets.Text(value=sb_config.get(Cfg.db_host_name, '127.0.0.1')), Cfg.db_host_name),\n",
+    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.db_port, '8888'))), Cfg.db_port),\n",
+    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.db_user)), Cfg.db_user),\n",
+    "            ('Password', widgets.Password(value=sb_config.get(Cfg.db_password)), Cfg.db_password),\n",
+    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema, 'IDA')), Cfg.db_schema),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.db_encryption, 'True') == 'True', indent=False),\n",
+    "                Cfg.db_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.bfs_port.value, '6666'))), Cfg.bfs_port.value),\n",
-    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.bfs_user.value)), Cfg.bfs_user.value),\n",
-    "            ('Password', widgets.Password(value=sb_config.get(Cfg.bfs_password.value)), Cfg.bfs_password.value),\n",
-    "            ('Service Name', widgets.Text(value=sb_config.get(Cfg.bfs_service.value, 'bfsdefault')), Cfg.bfs_service.value),\n",
-    "            ('Bucket Name', widgets.Text(value=sb_config.get(Cfg.bfs_bucket.value, 'default')), Cfg.bfs_bucket.value),\n",
-    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.bfs_encryption.value, 'True') == 'True', indent=False),\n",
-    "                Cfg.bfs_encryption.value)\n",
+    "            ('Host Name', widgets.Text(value=sb_config.get(Cfg.bfs_host_name, '127.0.0.1')), Cfg.bfs_host_name),\n",
+    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.bfs_port, '6666'))), Cfg.bfs_port),\n",
+    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.bfs_user)), Cfg.bfs_user),\n",
+    "            ('Password', widgets.Password(value=sb_config.get(Cfg.bfs_password)), Cfg.bfs_password),\n",
+    "            ('Service Name', widgets.Text(value=sb_config.get(Cfg.bfs_service, 'bfsdefault')), Cfg.bfs_service),\n",
+    "            ('Bucket Name', widgets.Text(value=sb_config.get(Cfg.bfs_bucket, 'default')), Cfg.bfs_bucket),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.bfs_encryption, 'True') == 'True', indent=False),\n",
+    "                Cfg.bfs_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Validate Certificate', widgets.Checkbox(value=sb_config.get(Cfg.cert_vld.value, 'True') == 'True', indent=False),\n",
-    "                Cfg.cert_vld.value),\n",
-    "            ('Trusted CA File/Dir', widgets.Text(value=sb_config.get(Cfg.trusted_ca.value)), Cfg.trusted_ca.value),\n",
-    "            ('Certificate File', widgets.Text(value=sb_config.get(Cfg.client_cert.value)), Cfg.client_cert.value),\n",
-    "            ('Private Key File', widgets.Text(value=sb_config.get(Cfg.client_key.value)), Cfg.client_key.value)\n",
+    "            ('Validate Certificate', widgets.Checkbox(value=sb_config.get(Cfg.cert_vld, 'True') == 'True', indent=False),\n",
+    "                Cfg.cert_vld),\n",
+    "            ('Trusted CA File/Dir', widgets.Text(value=sb_config.get(Cfg.trusted_ca)), Cfg.trusted_ca),\n",
+    "            ('Certificate File', widgets.Text(value=sb_config.get(Cfg.client_cert)), Cfg.client_cert),\n",
+    "            ('Private Key File', widgets.Text(value=sb_config.get(Cfg.client_key)), Cfg.client_key)\n",
     "        ]\n",
     "    ]\n",
     "\n",
@@ -119,10 +120,10 @@
     "\n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Memory Size (GiB)', widgets.IntText(value=int(sb_config.get(Cfg.mem_size.value, '2'))), Cfg.mem_size.value),\n",
-    "            ('Disk Size (GiB)', widgets.IntText(value=int(sb_config.get(Cfg.disk_size.value, '2'))), Cfg.disk_size.value),\n",
-    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema.value, 'IDA')), Cfg.db_schema.value)\n",
-    "        ],\n",
+    "            ('Memory Size (GiB)', widgets.IntText(value=int(sb_config.get(Cfg.mem_size, '2'))), Cfg.mem_size),\n",
+    "            ('Disk Size (GiB)', widgets.IntText(value=int(sb_config.get(Cfg.disk_size, '2'))), Cfg.disk_size),\n",
+    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema, 'IDA')), Cfg.db_schema)\n",
+    "        ]\n",
     "    ]\n",
     "\n",
     "    group_names = ['Database Configuration']\n",
@@ -136,7 +137,7 @@
     "    Creates a db configuration UI, depending on the choice of the database.\n",
     "    \"\"\"\n",
     "\n",
-    "    if sb_config.get(Cfg.use_itde.value, 'True') == 'True':\n",
+    "    if sb_config.get(Cfg.use_itde, 'True') == 'True':\n",
     "        return get_docker_db_config_ui()\n",
     "    else:\n",
     "        return get_custom_db_config_ui()\n",
@@ -151,7 +152,7 @@
     "    There should be a global variable `sb_config` referencing a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
-    "    if sb_config.get(Cfg.use_itde.value) != 'True':\n",
+    "    if sb_config.get(Cfg.use_itde) != 'True':\n",
     "        return None\n",
     "\n",
     "    from exasol.itde_manager import (bring_itde_up, is_itde_running, take_itde_down)\n",
