--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME, sb_config)"
+    "load_huggingface_model(MODEL_NAME)"
    ]
   },
   {
@@ -135,11 +135,11 @@
    "outputs": [],
    "source": [
     "sql = f\"\"\"\n",
-    "SELECT {sb_config.SCHEMA}.TE_TEXT_GENERATION_UDF(\n",
+    "SELECT {sb_config.db_schema}.TE_TEXT_GENERATION_UDF(\n",
     "    NULL,\n",
-    "    '{sb_config.TE_BFS_CONN}',\n",
-    "    '{sb_config.TE_TOKEN_CONN}',\n",
-    "    '{sb_config.TE_MODELS_BFS_DIR}',\n",
+    "    '{sb_config.te_bfs_connection}',\n",
+    "    '{sb_config.te_hf_connection}',\n",
+    "    '{sb_config.te_models_bfs_dir}',\n",
     "    '{MODEL_NAME}',\n",
     "    '{MY_TEXT}',\n",
     "    {MAX_LENGTH},\n",
@@ -156,14 +156,6 @@
     "print(MY_TEXT)\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30974b1a-a5b5-44d9-97c8-774be0dd4608",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
