--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "## Initialize the extension\n",
     "\n",
-    "<b>This operation normally takes a considerable amount of time to complete</b>\n",
+    "<b>This operation normally takes a considerable amount of time to complete.</b>\n",
     "\n",
     "When the initialization finishes we should see a printed output suggesting us to activate the language container. Let's take it as an indication of the successful completion of the initialization procedure. We are not going to do the language container activation manually."
    ]
