Fixing copy/paste error in the jupysql_init.ipynb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/jupysql_init.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Initializing a JupySQL session\n",
     "\n",
-    "<b>This notebook is not supposed to be run on its own. It contains model loading functions that are called by other notebooks.</b>"
+    "<b>This notebook is not supposed to be run independently. It brings in the sql magic and performs some common DB initialization steps. The latter includes opening the default schema and activating UDF languages at the session level.</b>"
    ]
   },
   {
