Addressed the review comments

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Load Model from Huggingface Hub\n",
     "\n",
-    "To use a model with the Transformer Extension one needs to download it from the Huggingface Hub and put it into the BucketFS. Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about model loading functionality it provides.\n",
+    "To use a model with the Transformer Extension one needs to download it from the Huggingface Hub and put it into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). Please refer to the Transformer Extension <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a> to find more information about model loading functionality it provides.\n",
     "\n",
     "There are two ways of doing this.\n",
     "\n",
     "1. Using the TE_MODEL_DOWNLOADER_UDF UDF.\n",
-    "2. Downloading a model to a local drive and subsequently uploading it into the BucketFS using CLI or an API.\n",
+    "2. Downloading a model to a local drive and subsequently uploading it into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) using CLI or an API.\n",
     "\n",
     "The first method requires the database machine to have internet access. The second method provides a workaround if this is a problem. Another advantage of the second method is that it caches downloaded models on the local drive. This can make the model transfer quicker if it needs to be repeated.\n",
     "\n",
@@ -47,14 +47,14 @@
     "\n",
     "    from exasol.connections import open_pyexasol_connection\n",
     "    from exasol.language_container_activation import get_activation_sql\n",
-    "    from exasol.ai_lab_config import AILabConfig as Cfg\n",
+    "    from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "    sql = f\"\"\"\n",
-    "    SELECT {sb_config.get(Cfg.db_schema)}.TE_MODEL_DOWNLOADER_UDF(\n",
+    "    SELECT {sb_config.get(CKey.db_schema)}.TE_MODEL_DOWNLOADER_UDF(\n",
     "        '{model_name}',\n",
-    "        '{sb_config.get(Cfg.te_models_bfs_dir)}',\n",
-    "        '{sb_config.get(Cfg.te_bfs_connection)}',\n",
-    "        '{sb_config.get(Cfg.te_hf_connection)}'\n",
+    "        '{sb_config.get(CKey.te_models_bfs_dir)}',\n",
+    "        '{sb_config.get(CKey.te_bfs_connection)}',\n",
+    "        '{sb_config.get(CKey.te_hf_connection)}'\n",
     "    )\n",
     "    \"\"\"\n",
     "\n",
@@ -97,7 +97,7 @@
     "\n",
     "    # Make a name for the model sub-directory\n",
     "    sub_dir = re.sub(r\"[/\\\\?%*:|\\\"<>\\x7F\\x00-\\x1F]\", \"-\", model_name)\n",
-    "    models_dir = sb_config.get(Cfg.te_models_cache_dir)\n",
+    "    models_dir = sb_config.get(CKey.te_models_cache_dir)\n",
     "    cache_dir = str(Path(models_dir) / sub_dir)\n",
     "\n",
     "    # Upload it to the BucketFS\n",
