--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
@@ -35,17 +35,17 @@
     "from enum import Enum\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from exasol.ai_lab_config import AILabConfig as Cfg\n",
+    "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
     "def get_sme_config_ui() -> widgets.Widget:\n",
     "\n",
     "    inputs = [\n",
-    "        ('Access Key ID', widgets.Password(value=sb_config.get(Cfg.aws_access_key_id)), Cfg.aws_access_key_id),\n",
-    "        ('Secret Access Key', widgets.Password(value=sb_config.get(Cfg.aws_secret_access_key)), Cfg.aws_secret_access_key),\n",
-    "        ('Region', widgets.Text(value=sb_config.get(Cfg.aws_region)), Cfg.aws_region),\n",
-    "        ('Role', widgets.Text(value=sb_config.get(Cfg.aws_role)), Cfg.aws_role),\n",
-    "        ('S3 Bucket', widgets.Text(value=sb_config.get(Cfg.aws_bucket)), Cfg.aws_bucket),\n",
+    "        ('Access Key ID', widgets.Password(value=sb_config.get(CKey.aws_access_key_id)), CKey.aws_access_key_id),\n",
+    "        ('Secret Access Key', widgets.Password(value=sb_config.get(CKey.aws_secret_access_key)), CKey.aws_secret_access_key),\n",
+    "        ('Region', widgets.Text(value=sb_config.get(CKey.aws_region)), CKey.aws_region),\n",
+    "        ('Role', widgets.Text(value=sb_config.get(CKey.aws_role)), CKey.aws_role),\n",
+    "        ('S3 Bucket', widgets.Text(value=sb_config.get(CKey.aws_bucket)), CKey.aws_bucket),\n",
     "    ]\n",
     "\n",
     "    return get_generic_config_ui(sb_config, [inputs], ['AWS Access Parameters'])\n"
