--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
@@ -37,11 +37,11 @@
     "import ipywidgets as widgets\n",
     "\n",
     "from exasol.secret_store import Secrets\n",
-    "from exasol.ai_lab_config import AILabConfig as Cfg\n",
+    "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
     "def get_generic_config_ui(conf: Secrets, \n",
-    "                          inputs: List[List[Tuple[str, widgets.Widget, Cfg]]], \n",
+    "                          inputs: List[List[Tuple[str, widgets.Widget, CKey]]], \n",
     "                          group_names: List[str]) -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    The function creates a generic configuration editor UI.\n",
