--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from exasol.ai_lab_config import AILabConfig as Cfg\n",
+    "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "import ipywidgets as widgets\n",
     "\n",
     "\n",
@@ -47,7 +47,7 @@
     "    ui_look = get_config_styles()\n",
     "\n",
     "    db_options = ['Docker-DB', 'Custom']\n",
-    "    db_choice = 0 if sb_config.get(Cfg.use_itde, 'True') == 'True' else 1\n",
+    "    db_choice = 0 if sb_config.get(CKey.use_itde, 'True') == 'True' else 1\n",
     "    db_selector = widgets.RadioButtons(options=db_options, value=db_options[db_choice], \n",
     "                                       layout=ui_look.input_layout, style=ui_look.input_style)\n",
     "    select_btn = widgets.Button(description='Select', style=ui_look.button_style, layout=ui_look.button_layout)\n",
@@ -55,7 +55,7 @@
     "\n",
     "\n",
     "    def select_database(btn):\n",
-    "        sb_config.save(Cfg.use_itde, str(db_selector.value == db_options[0]))\n",
+    "        sb_config.save(CKey.use_itde, str(db_selector.value == db_options[0]))\n",
     "        btn.icon = 'check'\n",
     "\n",
     "    def on_value_change(change):\n",
@@ -79,30 +79,30 @@
     "\n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Host Name', widgets.Text(value=sb_config.get(Cfg.db_host_name, '127.0.0.1')), Cfg.db_host_name),\n",
-    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.db_port, '8888'))), Cfg.db_port),\n",
-    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.db_user)), Cfg.db_user),\n",
-    "            ('Password', widgets.Password(value=sb_config.get(Cfg.db_password)), Cfg.db_password),\n",
-    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema, 'IDA')), Cfg.db_schema),\n",
-    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.db_encryption, 'True') == 'True', indent=False),\n",
-    "                Cfg.db_encryption)\n",
+    "            ('Host Name', widgets.Text(value=sb_config.get(CKey.db_host_name, '127.0.0.1')), CKey.db_host_name),\n",
+    "            ('Port', widgets.IntText(value=int(sb_config.get(CKey.db_port, '8888'))), CKey.db_port),\n",
+    "            ('User Name', widgets.Text(value=sb_config.get(CKey.db_user)), CKey.db_user),\n",
+    "            ('Password', widgets.Password(value=sb_config.get(CKey.db_password)), CKey.db_password),\n",
+    "            ('Default Schema', widgets.Text(value=sb_config.get(CKey.db_schema, 'IDA')), CKey.db_schema),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(CKey.db_encryption, 'True') == 'True', indent=False),\n",
+    "                CKey.db_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Host Name', widgets.Text(value=sb_config.get(Cfg.bfs_host_name, '127.0.0.1')), Cfg.bfs_host_name),\n",
-    "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.bfs_port, '6666'))), Cfg.bfs_port),\n",
-    "            ('User Name', widgets.Text(value=sb_config.get(Cfg.bfs_user)), Cfg.bfs_user),\n",
-    "            ('Password', widgets.Password(value=sb_config.get(Cfg.bfs_password)), Cfg.bfs_password),\n",
-    "            ('Service Name', widgets.Text(value=sb_config.get(Cfg.bfs_service, 'bfsdefault')), Cfg.bfs_service),\n",
-    "            ('Bucket Name', widgets.Text(value=sb_config.get(Cfg.bfs_bucket, 'default')), Cfg.bfs_bucket),\n",
-    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.bfs_encryption, 'True') == 'True', indent=False),\n",
-    "                Cfg.bfs_encryption)\n",
+    "            ('Host Name', widgets.Text(value=sb_config.get(CKey.bfs_host_name, '127.0.0.1')), CKey.bfs_host_name),\n",
+    "            ('Port', widgets.IntText(value=int(sb_config.get(CKey.bfs_port, '6666'))), CKey.bfs_port),\n",
+    "            ('User Name', widgets.Text(value=sb_config.get(CKey.bfs_user)), CKey.bfs_user),\n",
+    "            ('Password', widgets.Password(value=sb_config.get(CKey.bfs_password)), CKey.bfs_password),\n",
+    "            ('Service Name', widgets.Text(value=sb_config.get(CKey.bfs_service, 'bfsdefault')), CKey.bfs_service),\n",
+    "            ('Bucket Name', widgets.Text(value=sb_config.get(CKey.bfs_bucket, 'default')), CKey.bfs_bucket),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(CKey.bfs_encryption, 'True') == 'True', indent=False),\n",
+    "                CKey.bfs_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Validate Certificate', widgets.Checkbox(value=sb_config.get(Cfg.cert_vld, 'True') == 'True', indent=False),\n",
-    "                Cfg.cert_vld),\n",
-    "            ('Trusted CA File/Dir', widgets.Text(value=sb_config.get(Cfg.trusted_ca)), Cfg.trusted_ca),\n",
-    "            ('Certificate File', widgets.Text(value=sb_config.get(Cfg.client_cert)), Cfg.client_cert),\n",
-    "            ('Private Key File', widgets.Text(value=sb_config.get(Cfg.client_key)), Cfg.client_key)\n",
+    "            ('Validate Certificate', widgets.Checkbox(value=sb_config.get(CKey.cert_vld, 'True') == 'True', indent=False),\n",
+    "                CKey.cert_vld),\n",
+    "            ('Trusted CA File/Dir', widgets.Text(value=sb_config.get(CKey.trusted_ca)), CKey.trusted_ca),\n",
+    "            ('Certificate File', widgets.Text(value=sb_config.get(CKey.client_cert)), CKey.client_cert),\n",
+    "            ('Private Key File', widgets.Text(value=sb_config.get(CKey.client_key)), CKey.client_key)\n",
     "        ]\n",
     "    ]\n",
     "\n",
@@ -120,9 +120,9 @@
     "\n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Memory Size (GiB)', widgets.IntText(value=int(sb_config.get(Cfg.mem_size, '2'))), Cfg.mem_size),\n",
-    "            ('Disk Size (GiB)', widgets.IntText(value=int(sb_config.get(Cfg.disk_size, '2'))), Cfg.disk_size),\n",
-    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema, 'IDA')), Cfg.db_schema)\n",
+    "            ('Memory Size (GiB)', widgets.IntText(value=int(sb_config.get(CKey.mem_size, '2'))), CKey.mem_size),\n",
+    "            ('Disk Size (GiB)', widgets.IntText(value=int(sb_config.get(CKey.disk_size, '2'))), CKey.disk_size),\n",
+    "            ('Default Schema', widgets.Text(value=sb_config.get(CKey.db_schema, 'IDA')), CKey.db_schema)\n",
     "        ]\n",
     "    ]\n",
     "\n",
@@ -137,7 +137,7 @@
     "    Creates a db configuration UI, depending on the choice of the database.\n",
     "    \"\"\"\n",
     "\n",
-    "    if sb_config.get(Cfg.use_itde, 'True') == 'True':\n",
+    "    if sb_config.get(CKey.use_itde, 'True') == 'True':\n",
     "        return get_docker_db_config_ui()\n",
     "    else:\n",
     "        return get_custom_db_config_ui()\n",
@@ -152,7 +152,7 @@
     "    There should be a global variable `sb_config` referencing a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
-    "    if sb_config.get(Cfg.use_itde) != 'True':\n",
+    "    if sb_config.get(CKey.use_itde) != 'True':\n",
     "        return None\n",
     "\n",
     "    from exasol.itde_manager import (bring_itde_up, is_itde_running, take_itde_down)\n",
