Addressed the review comments

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/generic_config_ui.ipynb
@@ -80,9 +80,9 @@
     "        widget.layout = ui_look.input_layout\n",
     "        widget.observe(on_value_change, names=['value'])\n",
     "    # Create a list of lists with input rows\n",
-    "    item_groups = [[widgets.Box([widgets.Label(value=row[0], style=ui_look.label_style, layout=ui_look.label_layout), \n",
-    "                                 row[1]], layout=ui_look.row_layout) \n",
-    "                    for row in input_group] \n",
+    "    item_groups = [[widgets.Box([widgets.Label(value=input_title, style=ui_look.label_style, layout=ui_look.label_layout), \n",
+    "                                 input_widget], layout=ui_look.row_layout) \n",
+    "                    for input_title, input_widget, _ in input_group] \n",
     "                   for input_group in inputs]\n",
     "    # Create a list of blocks\n",
     "    items = [widgets.Box([widgets.Label(value=group_name, style=ui_look.header_style, layout=ui_look.header_layout)] + item_group, \n",
