Updated config element names (#119)
* Updated config element names

* Fixing a merge defect

* Addressed the review comments

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sklearn/sklearn_train_abalone.ipynb
@@ -59,7 +59,7 @@
     "stopwatch = Stopwatch()\n",
     "\n",
     "with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "    df = conn.export_to_pandas(query_or_table=(sb_config.SCHEMA, 'ABALONE_TRAIN'))\n",
+    "    df = conn.export_to_pandas(query_or_table=(sb_config.db_schema, 'ABALONE_TRAIN'))\n",
     "\n",
     "X, y = df.drop(columns='RINGS'), df['RINGS']\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.2)\n",
