--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
@@ -35,26 +35,17 @@
     "from enum import Enum\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "\n",
-    "class ExasolAWSConfig(Enum):\n",
-    "    # AWS access credentials\n",
-    "    key_id = 'AWS_ACCESS_KEY_ID'\n",
-    "    secret_key = 'AWS_SECRET_ACCESS_KEY'\n",
-    "    region = 'AWS_REGION'\n",
-    "    role = 'AWS_ROLE'\n",
-    "    # S3 bucket, which must exist\n",
-    "    bucket = 'AWS_BUCKET'\n",
+    "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
     "def get_sme_config_ui() -> widgets.Widget:\n",
     "\n",
-    "    Cfg = ExasolAWSConfig\n",
     "    inputs = [\n",
-    "        ('Access Key ID', widgets.Password(value=sb_config.get(Cfg.key_id.value)), Cfg.key_id.value),\n",
-    "        ('Secret Access Key', widgets.Password(value=sb_config.get(Cfg.secret_key.value)), Cfg.secret_key.value),\n",
-    "        ('Region', widgets.Text(value=sb_config.get(Cfg.region.value)), Cfg.region.value),\n",
-    "        ('Role', widgets.Text(value=sb_config.get(Cfg.role.value)), Cfg.role.value),\n",
-    "        ('S3 Bucket', widgets.Text(value=sb_config.get(Cfg.bucket.value)), Cfg.bucket.value),\n",
+    "        ('Access Key ID', widgets.Password(value=sb_config.get(CKey.aws_access_key_id)), CKey.aws_access_key_id),\n",
+    "        ('Secret Access Key', widgets.Password(value=sb_config.get(CKey.aws_secret_access_key)), CKey.aws_secret_access_key),\n",
+    "        ('Region', widgets.Text(value=sb_config.get(CKey.aws_region)), CKey.aws_region),\n",
+    "        ('Role', widgets.Text(value=sb_config.get(CKey.aws_role)), CKey.aws_role),\n",
+    "        ('S3 Bucket', widgets.Text(value=sb_config.get(CKey.aws_bucket)), CKey.aws_bucket),\n",
     "    ]\n",
     "\n",
     "    return get_generic_config_ui(sb_config, [inputs], ['AWS Access Parameters'])\n"
