Removing the word sandbox from references to config page

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
@@ -25,7 +25,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "%run ./sandbox_config.ipynb"
+    "%run ./main_config.ipynb"
    ],
    "metadata": {
     "collapsed": false
